--- a/bistro.html
+++ b/bistro.html
@@ -6,6 +6,8 @@
     </head>
     
     <body>
+        <h1>Black Goose Bistro</h1>
+        
         <h2>The Restaurant</h2>
         <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed
         atmosphere. The menu changes regularly to highlight the freshest local
