--- a/bistro.html
+++ b/bistro.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title><center>Black Goose Bistro</center></title>
+        <title>Black Goose Bistro</title>
     </head>
     
     <body>
