--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li><a href="bistro.html">Blackgoose Bistro</a></li>
             <li><a href="tapenade-recipe.html">Tapenade Recipe</a></li>
             <li><a href="bistro-news.html">Bistro News</a></li>
+            <li><a href="bistro-news-2.html">Bistro News 2</a></li>
         </ul>
     </body>
 </html>
