--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
             <!--This is a comment, here is the navigation list-->
             <li><a href="bistro.html">Blackgoose Bistro</a></li>
             <li><a href="tapenade-recipe.html">Tapenade Recipe</a></li>
-            <li><a href="bistro-news.html">Bistro News</a></li>
-            <li><a href="bistro-news-2.html">Bistro News 2</a></li>
+            
+        </ul>
+        <h1>Chapter 5</h1>
+        <ul>
+            <li><a href="bistro-news.html">Bistro News November</a></li>
+            <li><a href="bistro-news-2.html">Bistro News June</a></li>
         </ul>
     </body>
 </html>
