--- a/recipes/tapenade-recipe.html
+++ b/recipes/tapenade-recipe.html
@@ -28,4 +28,6 @@
             <li>Serve on thin toast rounds with goat cheese and fresh basil garnish
             (optional).</li>
         </ol>
+        <p><a href="../index.html">Back to home page</a></p>
     </body>
+<html/>
