--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li><a href="bistro-news.html">Bistro News November</a></li>
             <li><a href="bistro-news-2.html">Bistro News June</a></li>
+            <li><a href="jenskitchen/index.html">Jen's Kitchen</a></li>
         </ul>
     </body>
 </html>
