--- a/jenskitchen/recipes/pasta/linguine.html
+++ b/jenskitchen/recipes/pasta/linguine.html
@@ -45,6 +45,7 @@ small {
 </ol>
 
 <p><a href="../../index.html">[Back to the home page]</a></p>
+<p><a href="../../about.html">About Jen's Kitchen</a></p>
 
 </body>
 </html>
