--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="ch5/bistro-news.html">Bistro News November</a></li>
             <li><a href="ch5/bistro-news-2.html">Bistro News June</a></li>
             <li><a href="ch5/jenskitchen/index.html">Jen's Kitchen</a></li>
+            <li><a href="ch5/glossary.html">Glossary</a></li>
         </ul>
     </body>
 </html>
