--- a/ch7/gallery/fish.html
+++ b/ch7/gallery/fish.html
@@ -20,6 +20,10 @@ h1 {
   margin-top: 30px;
 }
 
+h2 {
+  color: #d1633c;
+  font-size: 1em;
+}
 </style>
 
 </head>
@@ -28,7 +32,7 @@ h1 {
 
 <h1>Gallery: Catch of the Day</h1>
 
-<p></p>
+<p><img src="photos/fish-800.jpg" alt="close-up of fish" width="800" height="600"></p>
 
 <p><a href="index.html">[Back to Gallery]</a></p>
 
