--- a/ch7/gallery/index.html
+++ b/ch7/gallery/index.html
@@ -41,7 +41,14 @@ We start our day at the crack of dawn to bake our own muffins, bread, and dinner
 <h2>Catch of the Day</h2>
 <p><a href="fish.html"><img src="thumbnails/fish-200.jpg" alt="close-up of fish" height="200" width="200"></a><br>Our chef works with local fisherman to pick the freshest the sea has to offer for our daily seafood special. Our Roast Cod Caponata with Roasted Potatoes is an old favorite with our regulars.</p>
 
+<h2>Fries</h2>
+<p><a href="fries.html"><img src="thumbnails/fries-200.jpg" alt="close-up of fries" height="200" width="200"></a><br>Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries Fries </p>
 
+<h2>Chicken</h2>
+<p><a href="chicken.html"><img src="thumbnails/chicken-200.jpg" alt="close-up of chicken" height="200" width="200"></a><br>Chicken Chicken Chicken Chicken Chicken Chicken Chicken Chicken Chicken Chicken Chicken Chicken Chicken Chicken Chicken Chicken Chicken Chicken </p>
+
+<h2>Tabouleh</h2>
+<p><a href="tabouleh.html"><img src="thumbnails/tabouleh-200.jpg" alt="close-up of tabouleh" height="200" width="200"></a><br>Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh Tabouleh </p>
 
 </body>
 </html>
