--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <ul>
             <li><a href="ch7/gallery/index.html">Black Goose Bistro Gallary</a></li>
             <li><a href="ch7/bistro/blackgoosebistro.html">Black Goose Bistro SVG</a></li>
+            <li><a href="ch7/svg.html">Sandbox</a></li>
+            <li><a href="ch7/responsivegallery/index.html">Responsive gallery</a></li>
         </ul>
     </body>
 </html>
