--- a/index.html
+++ b/index.html
@@ -25,5 +25,12 @@
             <li><a href="ch7/svg.html">Sandbox</a></li>
             <li><a href="ch7/responsivegallery/index.html">Responsive gallery</a></li>
         </ul>
+        <h1>Chapter 8</h1>
+        <ul>
+            <li><a href="ch8/simple-table.html">Table Markup</a></li>
+            <li><a href="ch8/col-span.html">Col Span</a></li>
+            <li><a href="ch8/row-span.html">Row Span</a></li>
+            <li><a href="ch8/table-challenger.html">Table Challenger</a></li>
+        </ul>
     </body>
 </html>
