--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
             <li><a href="ch8/row-span.html">Row Span</a></li>
             <li><a href="ch8/table-challenger.html">Table Challenger</a></li>
         </ul>
+        <ul>
+        <h1>Chapter 9</h1>
+        <ul>
+            <li><a href="ch9/pizza.html">Pizza Order Form</a></li>
+        </ul>
     </body>
 </html>
