--- a/ch9/pizza.html
+++ b/ch9/pizza.html
@@ -19,44 +19,64 @@
     <p>Our 12" wood-fired pizzas are available for delivery. Build your custom pizza and we'll deliver it within an hour.</p>
 
     <form action="http://www.blackgoosebistro.com/pizza.php" methon="POST">
-        Your Information
-        <ul>
-            <li>Name: <input type="text" name="customername"></li>
-            <li>Address: <input type="text" name="address"></li>
-            <li>Telephone Number: <input type="text" name="telephone"></li>
-            <li>Email: <input type="text" name="email"></li>
-            <li>Delivery instructions: <br><textarea name="instructions" rows="4" cols="60" maxlength="400" placeholder="No more than 400 characters long"></textarea></li>
-        </ul>
-
+        <fieldset>
+            <legend>Your Information</legend>
+            <ul>
+                <li><label for="form-name">Name:</label> <input type="text" name="fullname" id="form-name"></li>
+                <li><label for="form-address">Address:</label> <input type="text" name="address" id="form-address"></li>
+                <li><label for="form-telephone">Telephone Number:</label> <input type="text" name="telephone" id="form-telephone"></li>
+                <li><label for="form-email">Email:</label> <input type="text" name="email" id="form-email"></li>
+                <li><label for="form-instructions">Delivery instructions:</label> <br><textarea name="instructions" id="form-instructions" rows="4" cols="60" maxlength="400" placeholder="No more than 400 characters long"></textarea></li>
+            </ul>
+        </fieldset>
 
         <h2>Design Your Dream Pizza:</h2>
-
-        <p>Pizza specs
+        <fieldset>
             <p>
+                <legend>Pizza specs</legend>
+                <fieldset>
+                    <p>
+                        <p>
+                            <legend>Crust</legend> <em>(Choose one)</em>:</p>
+                        <ul>
+                            <li><label><input type="radio" name="crust" value "white">Classic white</label></li>
+                            <li><label><input type="radio" name="crust" value "multigrain">Multigrain</label></li>
+                            <li><label><input type="radio" name="crust" value "cheese-stuffed">Cheese-stuffed crust</label></li>
+                            <li><label><input type="radio" name="crust" value "GF">Gluten-free</label></li>
+                        </ul>
+                </fieldset>
+                <fieldset>
+                    <p>
+                        <legend>Toppings <em>(Choose as many as you want)</em>:</legend>
+                    </p>
+                    <ul>
+                        <li><input type="checkbox" name="toppings" value "red-sauce">Red sauce</li>
+                        <li><input type="checkbox" name="toppings" value "white-sauce">White sauce</li>
+                        <li><input type="checkbox" name="toppings" value "mozzarella">Mozzarella Cheese</li>
+                        <li><input type="checkbox" name="toppings" value "pepperoni">Pepperoni</li>
+                        <li><input type="checkbox" name="toppings" value "mushrooms">Mushrooms</li>
+                        <li><input type="checkbox" name="toppings" value "peppers">Peppers</li>
+                        <li><input type="checkbox" name="toppings" value "anchovies">Anchovies (nasty)</li>
+                    </ul>
+                </fieldset>
 
-                <p>Crust <em>(Choose one)</em>:</p>
-                <ul>
-                    <li><input type="radio" name="crust" value"white">Classic white</li>
-                    <li><input type="radio" name="crust" value"multigrain">Multigrain</li>
-                    <li><input type="radio" name="crust" value"cheese-stuffed">Cheese-stuffed crust</li>
-                    <li><input type="radio" name="crust" value"GF">Gluten-free</li>
-                </ul>
-
-                <p>Toppings <em>(Choose as many as you want)</em>:</p>
-                <ul>
-                    <li><input type="checkbox" name="toppings" value"red-sauce">Red sauce</li>
-                    <li><input type="checkbox" name="toppings" value"white-sauce">White sauce</li>
-                    <li><input type="checkbox" name="toppings" value"mozzarella">Mozzarella Cheese</li>
-                    <li><input type="checkbox" name="toppings" value"pepperoni">Pepperoni</li>
-                    <li><input type="checkbox" name="toppings" value"mushrooms">Mushrooms</li>
-                    <li><input type="checkbox" name="toppings" value"peppers">Peppers</li>
-                    <li><input type="checkbox" name="toppings" value"anchovies">Anchovies</li>
-                </ul>
-
-                <p>Number</p>
-                <p>How many pizzas:
-                </p>
-                <p><input type="submit" value="Bring me a pizza!"><input type="reset"></p>
+        </fieldset>
+        <fieldset>
+            <p>
+                <legend>Number</legend>
+            </p>
+            <p>How many pizzas:
+                <select name="pizzas" size="1">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>6</option>
+                </select>
+            </p>
+        </fieldset>
+        <p><input type="submit" value="Bring me a pizza!"><input type="reset"></p>
     </form>
 </body>
 
