--- a/ch9/pizza.html
+++ b/ch9/pizza.html
@@ -35,9 +35,7 @@
             <p>
                 <legend>Pizza specs</legend>
                 <fieldset>
-                    <p>
-                        <p>
-                            <legend>Crust</legend> <em>(Choose one)</em>:</p>
+                        <legend>Crust <em>(Choose one)</em>:</legend>
                         <ul>
                             <li><label><input type="radio" name="crust" value "white">Classic white</label></li>
                             <li><label><input type="radio" name="crust" value "multigrain">Multigrain</label></li>
@@ -46,9 +44,7 @@
                         </ul>
                 </fieldset>
                 <fieldset>
-                    <p>
-                        <legend>Toppings <em>(Choose as many as you want)</em>:</legend>
-                    </p>
+                    <legend>Toppings <em>(Choose as many as you want)</em>:</legend>
                     <ul>
                         <li><input type="checkbox" name="toppings" value "red-sauce">Red sauce</li>
                         <li><input type="checkbox" name="toppings" value "white-sauce">White sauce</li>
@@ -59,12 +55,9 @@
                         <li><input type="checkbox" name="toppings" value "anchovies">Anchovies (nasty)</li>
                     </ul>
                 </fieldset>
-
         </fieldset>
         <fieldset>
-            <p>
-                <legend>Number</legend>
-            </p>
+            <legend>Number</legend>
             <p>How many pizzas:
                 <select name="pizzas" size="1">
                     <option>1</option>
