--- a/index.html
+++ b/index.html
@@ -37,5 +37,10 @@
         <ul>
             <li><a href="ch9/pizza.html">Pizza Order Form</a></li>
         </ul>
+        <h1>Chapter 10</h1>
+        <ul>
+            <li><a href="ch10/iframe.html">iFrame</a></li>
+            <li><a href="ch10/video.html">Video Example</a></li>
+        </ul>
     </body>
 </html>
