--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         <li><a href="ch10/iframe.html">iFrame</a></li>
         <li><a href="ch10/video.html">Video Example</a></li>
     </ul>
+    <h1>Chapter 11</h1>
+    <ul>
+        <li><a href="ch11/cooking.html">Cooking Page</a></li>
+    </ul>
 </body>
 
 </html>
