--- a/ch11/cooking.html
+++ b/ch11/cooking.html
@@ -3,21 +3,27 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@900&display=swap" rel="stylesheet">
     <title>Cooking with Nada Surf</title>
     <style>
         h1 {
             color: orange;
             border-bottom: 1px solid orange;
+            font-family: 'Rubik', sans-serif;
         }
+
         h2 {
             color: orange;
             margin-left: 100px;
         }
+
         p {
             font-size: large;
             font-family: sans-serif;
             margin-left: 100px;
         }
+
         img {
             float: right;
             margin: 0 12px;
