--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
     <ul>
         <li><a href="ch11/cooking.html">Cooking Page</a></li>
     </ul>
+    <h1>Chapter 12</h1>
+    <ul>
+        <li><a href="ch12/menu.html">Cooking Page</a></li>
+    </ul>
 </body>
 
 </html>
