--- a/ch12/menu.html
+++ b/ch12/menu.html
@@ -9,14 +9,53 @@
     <style>
         body {
             font-family: Verdana, sans-serif;
-        }
-
-        body {
-            font-family: Verdana, sans-serif;
+            font-size: 100%;
         }
 
         h1 {
-            font-family: 'Marko One', serif;
+            font: bold 1.5em "Marko One",
+            Georgia, serif;
+        }
+
+        h2 {
+            font-size: 1em;
+        }
+
+        dt {
+            font-weight: bold;
+        }
+
+        strong {
+            font-style: italic;
+        }
+
+        dt strong {
+            color: tomato;
+        }
+
+        #info {
+            color: teal;
+        }
+
+        #info p {
+            font-style: italic;
+        }
+
+        .price {
+            font-family: Georgia, serif;
+            font-style: italic;
+            color: gray;
+        }
+
+        .label {
+            font-weight: bold;
+            font-variant: small-caps;
+            font-style: normal;
+        }
+        
+        .warning, sup {
+            font-size: small;
+            color: red;
         }
     </style>
 </head>
