--- a/ch12/menu.html
+++ b/ch12/menu.html
@@ -8,21 +8,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Verdana, sans-serif;
-            font-size: 100%;
+            font-family: Georgia, serif;
+            font-size: small;
+            line-height: 1.75em;
         }
 
         h1 {
             font: bold 1.5em "Marko One",
             Georgia, serif;
+            color: olive;
+            text-shadow: .05em .05em .1em lightslategray;
         }
 
         h2 {
             font-size: 1em;
+            text-transform: uppercase;
+            letter-spacing: .5em;
+            color: olive;
         }
 
         dt {
             font-weight: bold;
+            color: sienna;
         }
 
         strong {
@@ -33,12 +40,9 @@
             color: tomato;
         }
 
-        #info {
-            color: teal;
-        }
-
         #info p {
             font-style: italic;
+            color: gray;
         }
 
         .price {
@@ -52,10 +56,20 @@
             font-variant: small-caps;
             font-style: normal;
         }
-        
-        .warning, sup {
+
+        .warning,
+        sup {
             font-size: small;
             color: red;
+        }
+
+        h1, h2, #info {
+            text-align: center;
+        }
+        
+        h2 + p {
+        text-align: center;
+        font-style: italic;
         }
     </style>
 </head>
