--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
     </ul>
     <h1>Chapter 12</h1>
     <ul>
-        <li><a href="ch12/menu.html">Cooking Page</a></li>
+        <li><a href="ch12/menu.html">Menu</a></li>
+    </ul>
+    <h1>Chapter 13</h1>
+    <ul>
+        <li><a href="ch13/summermenu.html">Summer Menu</a></li>
     </ul>
 </body>
 
