--- a/ch13/summermenu.html
+++ b/ch13/summermenu.html
@@ -12,6 +12,7 @@
       font-size: 100%;
       line-height: 175%;
       margin: 0 15% 0;
+      background-image: url(images/bullseye.png);
     }
 
     header {
