--- a/ch13/summermenu.html
+++ b/ch13/summermenu.html
@@ -8,18 +8,26 @@
   <style>
     body {
       background-color: #d2dc9d;
+      background-image: url(images/blackgoose.png);
+      background-repeat: no-repeat;
+      background-position: center 100px;
       font-family: Georgia, serif;
       font-size: 100%;
       line-height: 175%;
       margin: 0 15% 0;
-      background-image: url(images/bullseye.png);
+      /*background-image: url(images/bullseye.png);
+      background-position: center 200px;
+      background-repeat: space;*/
     }
 
     header {
+      background-image: url(images/purpledot.png);
+      background-repeat: repeat-x;
       background: rgba(255, 255, 255, .5);
       margin-top: 0;
       padding: 3em 1em 2em 1em;
       text-align: center;
+      background-position: center top;
     }
 
     a {
