--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
     <ul>
         <li><a href="ch13/summermenu.html">Summer Menu</a></li>
     </ul>
+    <h1>Chapter 14</h1>
+    <ul>
+        <li><a href="ch14/bakery.html">Bakery</a></li>
+    </ul>
 </body>
 
 </html>
