--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
     <ul>
         <li><a href="ch14/bakery.html">Bakery</a></li>
     </ul>
+    <h1>Chapter 15</h1>
+    <ul>
+        <li><a href="ch15/bakery.html">Cooler Bakery</a></li>
+    </ul>
+    <h1>Chapter 16</h1>
+    <ul>
+        <li><a href="ch16/bakery_ch16.html">Even Cooler Bakery</a></li>
+        <li><a href="ch16/flex-menu.html">Flex Menu</a></li>
+    </ul>
 </body>
 
 </html>
