--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <ul>
         <li><a href="ch16/bakery_ch16.html">Even Cooler Bakery</a></li>
         <li><a href="ch16/flex-menu.html">Flex Menu</a></li>
+        <li><a href="ch16/grid.html">Flex Menu</a></li>
     </ul>
 </body>
 
