--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
         <li><a href="ch16/flex-menu.html">Flex Menu</a></li>
         <li><a href="ch16/grid.html">Flex Menu</a></li>
     </ul>
+    <h1>Simones Kitchen</h1>
+    <ul>
+        <li><a href="projects/simones.html">Simones</a></li>
+    </ul>
 </body>
 
 </html>
