--- a/projects/simones.html
+++ b/projects/simones.html
@@ -6,7 +6,7 @@
     <style>
         @import url(simones.css);
         @import url('https://fonts.googleapis.com/css2?family=Pompiere&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Arbutus+Slab&display=swap');
     </style>
 </head>
 
@@ -28,32 +28,315 @@
     <div id='hiring'>
         <img src="images/hiring.png" class="hiring">
     </div>
+
     <div id="cyob">
         <img src="images/cyob.png" class="cyob">
         <img src="images/cyobSizes.png" class="cyobSizes">
         <img src="images/cyobSteps.png" class="cyobSteps">
     </div>
-   <div class="sectionHeadingGrid">
-       <div class="sectionHeadingTop"></div>
-       <h1 class="sectionHeadingText">SIGNATURE BOWLS</h1>
-       <div class="sectionHeadingBottom"></div>
-   </div>
-</body>
 
-<body>
-   <div class="sectionHeadingGrid">
-       <div class="sectionHeadingTop"></div>
-       <h1 class="sectionHeadingText">BEVS</h1>
-       <div class="sectionHeadingBottom"></div>
-   </div>
-</body>
+    <div class="sectionHeadingGrid">
+        <div class="sectionHeadingTop"></div>
+        <h1 class="sectionHeadingText">SIGNATURE BOWLS</h1>
+        <div class="sectionHeadingBottom"></div>
+    </div>
 
-<body>
-   <div class="sectionHeadingGrid">
-       <div class="sectionHeadingTop"></div>
-       <h1 class="sectionHeadingText">BAKERY</h1>
-       <div class="sectionHeadingBottom"></div>
-   </div>
+    <div id="bowlSizesHeading">
+        <div id="lilBowl"><img src=images/lilBowl.png>
+            <p>LIL' BOWL</p>
+        </div>
+        <div id="bigBowl"><img src=images/bigBowl.png>
+            <p>BIG BOWL</p>
+        </div>
+    </div>
+    <div class="sigBowlItem">
+        <div class="sigBowlImg"><img src=images/chickenShawarmaBowl.png></div>
+        <div class="sigBowlTitle">
+            <h2>CHICKEN SHAWARMA</h2>
+        </div>
+        <div class="sigBowlDesc">
+            <p>White rice, fresh greens, Mediterranean-seasoned chicken, tomato salsa, kale tabbouleh, cabbage slaw, oven-roasted potatoes, hummus & creamy garlic dip</p>
+        </div>
+        <div class="sigBowlLilPrice">
+            <h2>$6.50</h2>
+        </div>
+        <div class="sigBowlBigPrice">
+            <h2>$8.50</h2>
+        </div>
+    </div>
+    <div class="sigBowlItem">
+        <div class="sigBowlImg"><img src=images/falafelBowl.png></div>
+        <div class="sigBowlTitle">
+            <h2>FALAFEL</h2>
+        </div>
+        <div class="sigBowlDesc">
+            <p>Brown rice, fresh greens, falafel, tomato salsa, garlic chickpeas, crunchy beets, kalamata olives, stuffed grape leaves, smokey eggplant dip, hummus & fetta - topped with tahini</p>
+        </div>
+        <div class="sigBowlLilPrice">
+            <h2>$6.50</h2>
+        </div>
+        <div class="sigBowlBigPrice">
+            <h2>$8.50</h2>
+        </div>
+    </div>
+    <div class="sigBowlItem">
+        <div class="sigBowlImg"><img src=images/chickenShawarmaBowl.png></div>
+        <div class="sigBowlTitle">
+            <h2>PORK SOUVLAKI</h2>
+        </div>
+        <div class="sigBowlDesc">
+            <p>White rice, fresh greens, Greek-seasoned pork, Greek salsa, cabbage slaw, oven-roasted potatoes, hummus & tzatziki</p>
+        </div>
+        <div class="sigBowlLilPrice">
+            <h2>$6.75</h2>
+        </div>
+        <div class="sigBowlBigPrice">
+            <h2>$8.75</h2>
+        </div>
+    </div>
+    <div class="sigBowlItem">
+        <div class="sigBowlImg"><img src=images/burritoBowl.png></div>
+        <div class="sigBowlTitle">
+            <h2>BURRITO BOWL</h2>
+        </div>
+        <div class="sigBowlDesc">
+            <p>Brown or white rice, fresh greens (optional) chicken or souvlaki, tomato salsa, black beans, sour cream, creamy avocado & mozzarella</p>
+        </div>
+        <div class="sigBowlLilPrice">
+            <h2>$6.75</h2>
+        </div>
+        <div class="sigBowlBigPrice">
+            <h2>$8.75</h2>
+        </div>
+    </div>
+    <div class="sigBowlItem">
+        <div class="sigBowlImg"><img src=images/meatballBowl.png></div>
+        <div class="sigBowlTitle">
+            <h2>MEATBALL BOWL</h2>
+        </div>
+        <div class="sigBowlDesc">
+            <p>White rice, fresh greens, Mediterranean meatballs, Greek salsa, garlic chickpeas, Kalamata olives, hummus, tzatziki & stuffed grape leaves.</p>
+        </div>
+        <div class="sigBowlLilPrice">
+            <h2>$6.75</h2>
+        </div>
+        <div class="sigBowlBigPrice">
+            <h2>$8.75</h2>
+        </div>
+    </div>
+    <div class="sigBowlItem">
+        <div class="sigBowlImg"><img src=images/tofuBowl.png></div>
+        <div class="sigBowlTitle">
+            <h2>TOFU GYRO</h2>
+        </div>
+        <div class="sigBowlDesc">
+            <p>White rice, fresh greens, seasoned tofu, greek salsa, garlic chickpeas, kalamata olives, hummus, tzatziki & stuffed grape leaves.</p>
+        </div>
+        <div class="sigBowlLilPrice">
+            <h2>$6.50</h2>
+        </div>
+        <div class="sigBowlBigPrice">
+            <h2>$8.50</h2>
+        </div>
+    </div>
+    <img id=wrapOption src=images/wrapOption.png>
+
+    <div class="sectionHeadingGrid">
+        <div class="sectionHeadingTop"></div>
+        <h1 class="sectionHeadingText">SIDE DISHES & SNACKS</h1>
+        <div class="sectionHeadingBottom"></div>
+    </div>
+
+    <div class="sectionHeadingGridGreen">
+        <div class="sectionHeadingTopGreen"></div>
+        <h1 class="sectionHeadingTextGreen">SIDE DISHES & SNACKS</h1>
+        <div class="sectionHeadingBottomGreen"></div>
+    </div>
+
+    <div id="sidesContainer">
+        <div class="sidesTitleGrid">
+            <div class="salads">
+                <h2>SALADS</h2>
+                <p>$4.50</p>
+            </div>
+            <div class="pitzaPies">
+                <h2>PITZA PIES</h2>
+                <p>$4 - $5</p>
+            </div>
+            <div class="sides">
+                <h2>SIDES</h2>
+                <p>$3 - $5</p>
+            </div>
+        </div>
+        <div class="sidesGrid">
+            <div class="saladsTitle">
+                <h3>KALE-QUINOA TABBOULEH</h3>
+            </div>
+            <div class="saladsDescription">
+                <p>Chopped kale, golden quinoa, tomato, onion, cucumber, topped with oil</p>
+            </div>
+            <div class="pitzaPiesTitle">
+                <h3>ZA'ATAR</h3>
+            </div>
+            <div class="pitzaPiesDescription">
+                <p>Olive oil brushed pita sprinkled with thyme and sesame</p>
+            </div>
+            <div class="sidesLeftTitle">
+                <h3>FALAFEL SNACK</h3>
+            </div>
+            <div class="sidesLeftDescription">
+                <p>4 warm falafel patties topped with choice of classic or spicy tahini and served with pita</p>
+            </div>
+            <div class="sidesRightTitle">
+                <h3>STUFFED GRAPE LEAVES</h3>
+            </div>
+            <div class="sidesRightDescription">
+                <p>Rolled grape leaves filled with Mediterranean seasoned rice and topped with a dollop of creamy garlic dip</p>
+            </div>
+        </div>
+        <div class="sidesGrid">
+            <div class="saladsTitle">
+                <h3>CHICKPEA SALAD</h3>
+            </div>
+            <div class="saladsDescription">
+                <p>Chickpeas seasoned with garlic and olive oil</p>
+            </div>
+            <div class="pitzaPiesTitle">
+                <h3>GOAT CHEESE</h3>
+            </div>
+            <div class="pitzaPiesDescription">
+                <p>Olive oil brushed pita topped with a blend of creamy garlic, goat cheese, and mozzarella</p>
+            </div>
+            <div class="sidesLeftTitle">
+                <h3>TRIPLE DIP</h3>
+            </div>
+            <div class="sidesLeftDescription">
+                <p>Sample of up to three of our homemade dips served with warm pita</p>
+            </div>
+            <div class="sidesRightTitle">
+                <h3>GARLIC "FRIES"</h3>
+            </div>
+            <div class="sidesRightDescription">
+                <p>Mediterranean-seasoned oven roasted potatoes topped with a dollop of creamy garlic dip</p>
+            </div>
+        </div>
+        <div class="sidesGrid">
+            <div class="saladsTitle">
+                <h3></h3>
+            </div>
+            <div class="saladsDescription">
+                <p></p>
+            </div>
+            <div class="pitzaPiesTitle">
+                <h3>SPINACH-FETA</h3>
+            </div>
+            <div class="pitzaPiesDescription">
+                <p>Spinach, onion, & feta blended together with lemon and garlic</p>
+            </div>
+            <div class="sidesLeftTitle">
+                <h3>DAILY SOUP</h3>
+            </div>
+            <div class="sidesLeftDescription">
+                <p>Seasonal Mediterranean-seasoned soup</p>
+            </div>
+            <div class="sidesRightTitle">
+                <h3></h3>
+            </div>
+            <div class="sidesRightDescription">
+                <p></p>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <div class="sectionHeadingGrid">
+        <div class="sectionHeadingTop"></div>
+        <h1 class="sectionHeadingText">BEVS</h1>
+        <div class="sectionHeadingBottom"></div>
+    </div>
+    <div id="beveragesContainer">
+        <div class="beveragesItemGrid">
+            <div class="beveragesImage"><img src="images/regularCoffee800.png"></div>
+            <div class="beveragesTitle">
+                <h2>FRESH BREW</h2>
+                <p>Get your freshly brewed coffee</p>
+            </div>
+            <div class="beveragesPrice">
+                <h2>$1.50</h2>
+            </div>
+        </div>
+        <div class="beveragesItemGrid">
+            <div class="beveragesImage"><img src="images/icedCoffee800.png"></div>
+            <div class="beveragesTitle">
+                <h2>COLD BREW (ICED)</h2>
+                <p>Cold brewed and poured over ice</p>
+            </div>
+            <div class="beveragesPrice">
+                <h2>$1.50</h2>
+            </div>
+        </div>
+        <div class="beveragesItemGrid">
+            <div class="beveragesImage"><img src="images/lattee800.png"></div>
+            <div class="beveragesTitle">
+                <h2>LATTE</h2>
+                <p>The finest espresso over steamed milk, topped with foam and flavoredd as desired</p>
+            </div>
+            <div class="beveragesPrice">
+                <h2>$1.50</h2>
+            </div>
+        </div>
+        <div class="beveragesItemGrid">
+            <div class="beveragesImage"><img src="images/espresso800.png"></div>
+            <div class="beveragesTitle">
+                <h2>ESPRESSO</h2>
+                <p>Potent coffee in a small quantity</p>
+            </div>
+            <div class="beveragesPrice">
+                <h2>$1.50</h2>
+            </div>
+        </div>
+        <div class="beveragesItemGrid">
+            <div class="beveragesImage"><img src="images/tea800.png"></div>
+            <div class="beveragesTitle">
+                <h2>HOT TEA</h2>
+                <p>Choice of green tea, black tea, or earl gray</p>
+            </div>
+            <div class="beveragesPrice">
+                <h2>$1.50</h2>
+            </div>
+        </div>
+        <div class="beveragesItemGrid">
+            <div class="beveragesImage"><img src="images/icedTea800.png"></div>
+            <div class="beveragesTitle">
+                <h2>ICED TEA</h2>
+                <p>Freshly brewed tea & poured over ice</p>
+            </div>
+            <div class="beveragesPrice">
+                <h2>$1.50</h2>
+            </div>
+        </div>
+        <div class="beveragesItemGrid">
+            <div class="beveragesImage"><img src="images/seltzer800.png"></div>
+            <div class="beveragesTitle">
+                <h2>SELTZER</h2>
+                <p>Assortment of flavors, all-natural</p>
+            </div>
+            <div class="beveragesPrice">
+                <h2>$1.50</h2>
+            </div>
+        </div>
+        <div class="beveragesItemGrid">
+            <div class="beveragesImage"><img src="images/water800.png"></div>
+            <div class="beveragesTitle">
+                <h2>WATER</h2>
+                <p>Refreshing H2O, extra wet</p>
+            </div>
+            <div class="beveragesPrice">
+                <h2>$1.50</h2>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
